# my-journal

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .gitignore  CLAUDE.md  app.py  app.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/.tina4/: mcp.json
backend/.tina4/agents/coder/: config.json  system.md
backend/.tina4/agents/debug/: config.json  system.md
backend/.tina4/agents/image-gen/: config.json  system.md
backend/.tina4/agents/planner/: config.json  system.md
backend/.tina4/agents/supervisor/: config.json  system.md
backend/.tina4/agents/vision/: config.json  system.md
backend/.tina4/chat/: escalations.json  thoughts.json
backend/migrations/: 20260518144334_create_initial_tables.sql  20260518144505_create_initial_insert_greetings.sql  20260518144505_initial_insert_greetings.sql  20260518144554_create_initial_insert_moods.sql  20260518144554_initial_insert_moods.sql  20260518144623_create_initial_insert_prompts.sql  20260518144623_initial_insert_prompts.sql  20260518144644_create_initial_insert_tags.sql  20260518144644_initial_insert_tags.sql
backend/src/: __init__.py
backend/src/app/: Auth.py  Responses.py
backend/src/middleware/: ApiKeyMiddleware.py  AuthUserMiddleware.py
backend/src/orm/: User.py
backend/src/routes/: auth.py
src/: main.ts
src/api/: account.ts  apiHandler.ts
src/components/: app-header.ts  horizontal-tabs.ts  moods.ts  new-entry-header.ts  new-entry-moods.ts  new-entry-tags.ts  new-entry-text-area.ts  show-toast-message.ts
(+18 files in other folders)
